[lworld] TestArrays.java crashes with "assert(is_in_g1_reserved((const void*) addr)) failed: Address 0x00000005d56dd5f0 is outside of the heap"

XMLWordPrintable

      Running test/hotspot/jtreg/compiler/valhalla/valuetypes/TestArrays.java with -XX:CompileThreshold=100 crashes the VM:

      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/g1CollectedHeap.inline.hpp:83
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhallaL/open/src/hotspot/share/gc/g1/g1CollectedHeap.inline.hpp:83), pid=6633, tid=6822
      # assert(is_in_g1_reserved((const void*) addr)) failed: Address 0x00000005d56dd5f0 is outside of the heap ranging from [0x0000000709800000 to 0x0000000800000000)
      #
      # JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-adhoc.tobias.open)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-adhoc.tobias.open, mixed mode, compressed oops, g1 gc, linux-amd64)
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /oracle/valhallaL/open/JTwork/scratch/core.6633)
      #
      Unsupported internal testing APIs have been used.

      # An error report file with more information is saved as:
      # /oracle/valhallaL/open/JTwork/scratch/hs_err_pid6633.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #
      Current thread is 6822
      Dumping core ...
      ];
       stderr: [Java HotSpot(TM) 64-Bit Server VM warning: ValueTypePassFieldsAsArgs is not supported on this platform
      Java HotSpot(TM) 64-Bit Server VM warning: ValueTypeReturnedAsFields is not supported on this platform
      Exception in thread "main" java.lang.reflect.InvocationTargetException
      at jdk.internal.reflect.GeneratedMethodAccessor22.invoke(Unknown Source)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:566)
      at compiler.valhalla.valuetypes.ValueTypeTest.run(ValueTypeTest.java:386)
      at compiler.valhalla.valuetypes.ValueTypeTest.run(ValueTypeTest.java:182)
      at compiler.valhalla.valuetypes.TestArrays.main(TestArrays.java:69)
      Caused by: java.lang.RuntimeException: assertEquals: expected 8456481904692492328 to equal 5195
      at jdk.test.lib.Asserts.fail(Asserts.java:594)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:189)
      at jdk.test.lib.Asserts.assertEQ(Asserts.java:166)
      at compiler.valhalla.valuetypes.TestArrays.test34_verifier(TestArrays.java:810)
      ... 6 more
      ]
       exitValue = 134

            Assignee:
            Roland Westrelin
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: