8204953: [lworld] TestArrays.java crashes with "assert(is_in_g1_reserved((const void*) addr)) failed: Address 0x00000005d56dd5f0 is outside of the heap"

Reviewed-by: thartmann